--- a/cfg-client/package.json
+++ b/cfg-client/package.json
@@ -13,6 +13,8 @@
     "axios": "^0.21.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-pro-sidebar": "^0.7.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
